--- a/GameCityApi/appsettings.json
+++ b/GameCityApi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UnionLarpDatabase": ""
-  }
+  },
+  "JwtSecret": "",
+  "GoogleClientId": "",
+  "GoogleClientSecret": ""
 }
