--- a/GameCityApi/appsettings.json
+++ b/GameCityApi/appsettings.json
@@ -12,5 +12,9 @@
   },
   "JwtSecret": "",
   "GoogleClientId": "",
-  "GoogleClientSecret": ""
+  "GoogleClientSecret": "",
+  "NineIslesData": {
+    "ApiKey": "",
+    "SpreadsheetId": ""
+  }
 }
